--- a/operations.html
+++ b/operations.html
@@ -74,7 +74,7 @@ function operaciones(op)
  
 <body>
  
-<h1>Script de Victor Manuel Martinez Casamayor</h1>
+<h1>Script de Victor Manuel Martínez Casamayor</h1>
  
 <form>
     N?mero 1: <input id="num1" type="number">
